[tool.poetry]
name = "rl-adventure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
gym = "^0.26.0"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
numpy = "^1.26.4"
torch = "^2.3.0"
matplotlib = "^3.8.4"
opencv-python = "4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
